@@ -405,101 +405,103 @@ generated by GNU Autoconf 2.61.  Invocation command line was
 
 on debian
 
-config.status:775: creating Makefile
-config.status:775: creating po/Makefile.in
-config.status:775: creating data/Makefile
-config.status:775: creating data/fonts/Makefile
-config.status:775: creating data/images/Makefile
-config.status:775: creating data/images/backgrounds/Makefile
-config.status:775: creating data/images/cities/Makefile
-config.status:775: creating data/images/comets/Makefile
-config.status:775: creating data/images/hands/Makefile
-config.status:775: creating data/images/icons/Makefile
-config.status:775: creating data/images/keyboard/Makefile
-config.status:775: creating data/images/menu/Makefile
-config.status:775: creating data/images/status/Makefile
-config.status:775: creating data/images/tux/Makefile
-config.status:775: creating data/scripts/Makefile
-config.status:775: creating data/sounds/Makefile
-config.status:775: creating data/themes/Makefile
-config.status:775: creating data/themes/armenian/Makefile
-config.status:775: creating data/themes/armenian/images/Makefile
-config.status:775: creating data/themes/assamese/Makefile
-config.status:775: creating data/themes/assamese/words/Makefile
-config.status:775: creating data/themes/bokmal/Makefile
-config.status:775: creating data/themes/bokmal/words/Makefile
-config.status:775: creating data/themes/bokmal/images/Makefile
-config.status:775: creating data/themes/bokmal/images/status/Makefile
-config.status:775: creating data/themes/brazilian-portuguese/Makefile
-config.status:775: creating data/themes/brazilian-portuguese/images/Makefile
-config.status:775: creating data/themes/brazilian-portuguese/words/Makefile
-config.status:775: creating data/themes/catalan/Makefile
-config.status:775: creating data/themes/catalan/words/Makefile
-config.status:775: creating data/themes/czech/Makefile
-config.status:775: creating data/themes/czech/words/Makefile
-config.status:775: creating data/themes/dansk/Makefile
-config.status:775: creating data/themes/dansk/sounds/Makefile
-config.status:775: creating data/themes/dansk/words/Makefile
-config.status:775: creating data/themes/deutsch/Makefile
-config.status:775: creating data/themes/deutsch/words/Makefile
-config.status:775: creating data/themes/espanol/Makefile
-config.status:775: creating data/themes/espanol/images/Makefile
-config.status:775: creating data/themes/espanol/words/Makefile
-config.status:775: creating data/themes/euskara/Makefile
-config.status:775: creating data/themes/euskara/images/Makefile
-config.status:775: creating data/themes/euskara/words/Makefile
-config.status:775: creating data/themes/french/Makefile
-config.status:775: creating data/themes/french/words/Makefile
-config.status:775: creating data/themes/greek/Makefile
-config.status:775: creating data/themes/greek/words/Makefile
-config.status:775: creating data/themes/italian/Makefile
-config.status:775: creating data/themes/italian/images/Makefile
-config.status:775: creating data/themes/italian/words/Makefile
-config.status:775: creating data/themes/jamaican/Makefile
-config.status:775: creating data/themes/jamaican/images/Makefile
-config.status:775: creating data/themes/jamaican/words/Makefile
-config.status:775: creating data/themes/lithuanian/Makefile
-config.status:775: creating data/themes/lithuanian/images/Makefile
-config.status:775: creating data/themes/lithuanian/images/status/Makefile
-config.status:775: creating data/themes/lithuanian/sounds/Makefile
-config.status:775: creating data/themes/lithuanian/words/Makefile
-config.status:775: creating data/themes/malayalam/Makefile
-config.status:775: creating data/themes/malayalam/images/Makefile
-config.status:775: creating data/themes/malayalam/images/status/Makefile
-config.status:775: creating data/themes/malayalam/images/keyboard/Makefile
-config.status:775: creating data/themes/malayalam/scripts/Makefile
-config.status:775: creating data/themes/malayalam/words/Makefile
-config.status:775: creating data/themes/nederlands/Makefile
-config.status:775: creating data/themes/nederlands/words/Makefile
-config.status:775: creating data/themes/nepali/Makefile
-config.status:775: creating data/themes/nepali/words/Makefile
-config.status:775: creating data/themes/nynorsk/Makefile
-config.status:775: creating data/themes/nynorsk/images/Makefile
-config.status:775: creating data/themes/nynorsk/images/status/Makefile
-config.status:775: creating data/themes/nynorsk/words/Makefile
-config.status:775: creating data/themes/russian/Makefile
-config.status:775: creating data/themes/russian/images/Makefile
-config.status:775: creating data/themes/russian/images/status/Makefile
-config.status:775: creating data/themes/russian/words/Makefile
-config.status:775: creating data/themes/svenska/Makefile
-config.status:775: creating data/themes/svenska/words/Makefile
-config.status:775: creating data/themes/swahili/Makefile
-config.status:775: creating data/themes/swahili/words/Makefile
-config.status:775: creating data/themes/tamil/Makefile
-config.status:775: creating data/themes/tamil/words/Makefile
-config.status:775: creating data/themes/wolof/Makefile
-config.status:775: creating data/themes/wolof/images/Makefile
-config.status:775: creating data/themes/wolof/words/Makefile
-config.status:775: creating data/words/Makefile
-config.status:775: creating doc/Makefile
-config.status:775: creating doc/en/Makefile
-config.status:775: creating src/Makefile
-config.status:775: creating nsis/tuxtype.nsi
-config.status:775: creating tuxtype.spec
-config.status:775: creating config.h
-config.status:1015: config.h is unchanged
-config.status:1061: executing po-directories commands
-config.status:1061: executing depfiles commands
+config.status:777: creating Makefile
+config.status:777: creating po/Makefile.in
+config.status:777: creating data/Makefile
+config.status:777: creating data/fonts/Makefile
+config.status:777: creating data/images/Makefile
+config.status:777: creating data/images/backgrounds/Makefile
+config.status:777: creating data/images/cities/Makefile
+config.status:777: creating data/images/comets/Makefile
+config.status:777: creating data/images/hands/Makefile
+config.status:777: creating data/images/icons/Makefile
+config.status:777: creating data/images/keyboard/Makefile
+config.status:777: creating data/images/menu/Makefile
+config.status:777: creating data/images/status/Makefile
+config.status:777: creating data/images/tux/Makefile
+config.status:777: creating data/scripts/Makefile
+config.status:777: creating data/sounds/Makefile
+config.status:777: creating data/themes/Makefile
+config.status:777: creating data/themes/armenian/Makefile
+config.status:777: creating data/themes/armenian/images/Makefile
+config.status:777: creating data/themes/assamese/Makefile
+config.status:777: creating data/themes/assamese/words/Makefile
+config.status:777: creating data/themes/bokmal/Makefile
+config.status:777: creating data/themes/bokmal/words/Makefile
+config.status:777: creating data/themes/bokmal/images/Makefile
+config.status:777: creating data/themes/bokmal/images/status/Makefile
+config.status:777: creating data/themes/brazilian-portuguese/Makefile
+config.status:777: creating data/themes/brazilian-portuguese/images/Makefile
+config.status:777: creating data/themes/brazilian-portuguese/words/Makefile
+config.status:777: creating data/themes/catalan/Makefile
+config.status:777: creating data/themes/catalan/words/Makefile
+config.status:777: creating data/themes/czech/Makefile
+config.status:777: creating data/themes/czech/words/Makefile
+config.status:777: creating data/themes/dansk/Makefile
+config.status:777: creating data/themes/dansk/sounds/Makefile
+config.status:777: creating data/themes/dansk/words/Makefile
+config.status:777: creating data/themes/deutsch/Makefile
+config.status:777: creating data/themes/deutsch/words/Makefile
+config.status:777: creating data/themes/espanol/Makefile
+config.status:777: creating data/themes/espanol/images/Makefile
+config.status:777: creating data/themes/espanol/words/Makefile
+config.status:777: creating data/themes/euskara/Makefile
+config.status:777: creating data/themes/euskara/images/Makefile
+config.status:777: creating data/themes/euskara/words/Makefile
+config.status:777: creating data/themes/french/Makefile
+config.status:777: creating data/themes/french/words/Makefile
+config.status:777: creating data/themes/greek/Makefile
+config.status:777: creating data/themes/greek/words/Makefile
+config.status:777: creating data/themes/italian/Makefile
+config.status:777: creating data/themes/italian/images/Makefile
+config.status:777: creating data/themes/italian/words/Makefile
+config.status:777: creating data/themes/jamaican/Makefile
+config.status:777: creating data/themes/jamaican/images/Makefile
+config.status:777: creating data/themes/jamaican/words/Makefile
+config.status:777: creating data/themes/kannada/Makefile
+config.status:777: creating data/themes/kannada/words/Makefile
+config.status:777: creating data/themes/lithuanian/Makefile
+config.status:777: creating data/themes/lithuanian/images/Makefile
+config.status:777: creating data/themes/lithuanian/images/status/Makefile
+config.status:777: creating data/themes/lithuanian/sounds/Makefile
+config.status:777: creating data/themes/lithuanian/words/Makefile
+config.status:777: creating data/themes/malayalam/Makefile
+config.status:777: creating data/themes/malayalam/images/Makefile
+config.status:777: creating data/themes/malayalam/images/status/Makefile
+config.status:777: creating data/themes/malayalam/images/keyboard/Makefile
+config.status:777: creating data/themes/malayalam/scripts/Makefile
+config.status:777: creating data/themes/malayalam/words/Makefile
+config.status:777: creating data/themes/nederlands/Makefile
+config.status:777: creating data/themes/nederlands/words/Makefile
+config.status:777: creating data/themes/nepali/Makefile
+config.status:777: creating data/themes/nepali/words/Makefile
+config.status:777: creating data/themes/nynorsk/Makefile
+config.status:777: creating data/themes/nynorsk/images/Makefile
+config.status:777: creating data/themes/nynorsk/images/status/Makefile
+config.status:777: creating data/themes/nynorsk/words/Makefile
+config.status:777: creating data/themes/russian/Makefile
+config.status:777: creating data/themes/russian/images/Makefile
+config.status:777: creating data/themes/russian/images/status/Makefile
+config.status:777: creating data/themes/russian/words/Makefile
+config.status:777: creating data/themes/svenska/Makefile
+config.status:777: creating data/themes/svenska/words/Makefile
+config.status:777: creating data/themes/swahili/Makefile
+config.status:777: creating data/themes/swahili/words/Makefile
+config.status:777: creating data/themes/tamil/Makefile
+config.status:777: creating data/themes/tamil/words/Makefile
+config.status:777: creating data/themes/wolof/Makefile
+config.status:777: creating data/themes/wolof/images/Makefile
+config.status:777: creating data/themes/wolof/words/Makefile
+config.status:777: creating data/words/Makefile
+config.status:777: creating doc/Makefile
+config.status:777: creating doc/en/Makefile
+config.status:777: creating src/Makefile
+config.status:777: creating nsis/tuxtype.nsi
+config.status:777: creating tuxtype.spec
+config.status:777: creating config.h
+config.status:1017: config.h is unchanged
+config.status:1063: executing po-directories commands
+config.status:1063: executing depfiles commands
 
 ## ---------------- ##
 ## Cache variables. ##
