@@ -152,6 +152,8 @@ data/themes/italian/words/Makefile
 data/themes/jamaican/Makefile
 data/themes/jamaican/images/Makefile
 data/themes/jamaican/words/Makefile
+data/themes/kannada/Makefile
+data/themes/kannada/words/Makefile
 data/themes/lithuanian/Makefile
 data/themes/lithuanian/images/Makefile
 data/themes/lithuanian/images/status/Makefile
