@@ -1,3 +1,4 @@
+ಅಕ್ಷರಮಾಲೆ
 ೋ
 ೌ
 ೆ
