@@ -1,3 +1,4 @@
+ಚಿಕ್ಕ ಪದಗಳು
 ఆడు
 అంకు
 అంగీ
