@@ -1,3 +1,4 @@
+ಮಧ್ಯಮ ಪದಗಳು
 అంగన
 అర్థము
 అంజన
