@@ -1,3 +1,4 @@
+ಉದ್ದನೆಯ ಪದಗಳು
 ఆధోరణుడు
 అంగరక్ష
 అంతస్సు
