@@ -18,6 +18,7 @@ fr
 el
 it
 ja
+kn
 lt
 nl
 nn
