@@ -1,7 +1,12 @@
+27 Aug 2008
+[ Mobin Mohan <mobinmohan@gmail.com> ]
+  	- Kannada theme added
+     - Kannada po file contributed by Shankar Prasad <svenkate@redhat.com>
+
 26 Aug 2008
 [ Mobin Mohan <mobinmohan@gmail.com> ]
   	- Assamese theme added
-        - Assamese po file contributed by Amitakhya Phukan <aphukan@redhat.com>
+     - Assamese po file contributed by Amitakhya Phukan <aphukan@redhat.com>
 	- Tamil theme added
 	- Tamil po file contributed by Felix I <ifelix25@gmail.com>
 
